<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SignFragment"
              android:orientation="vertical"
              android:gravity="center">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/first_name"
              android:inputType="text"
              android:id="@+id/txt_first_name"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/last_name"
              android:inputType="text"
              android:id="@+id/txt_last_name"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/btn_sign_up"/>


</LinearLayout>
</layout>