<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="com.example.android_third_task.data.User"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".WinFragment"
            android:orientation="vertical"
            android:gravity="center">

        <!-- TODO: Update blank fragment layout -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
              />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{user.component1()}"
                android:gravity="center"
                android:id="@+id/txt_congratulation"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_play_again"
                android:text="@string/play_again"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share_win_number"
                android:text="@string/share"/>
    </LinearLayout>
</layout>